--- a/index.html
+++ b/index.html
@@ -1,89 +1,323 @@
 ﻿<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#c26c37" />
-  <title>Study Guide PWA</title>
-  <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" href="app.css" />
-</head>
-<body>
-  <div class="backdrop" aria-hidden="true"></div>
-  <header class="hero">
-    <div class="hero-text">
-      <p class="eyebrow">AA Study Guide</p>
-      <h1>Build your personal glossary while you read.</h1>
-      <p class="subhead">Select any phrase to define it, then search for every instance across the library.</p>
-    </div>
-    <div class="hero-status" id="statusLine">Loading sources...</div>
-  </header>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, maximum-scale=1, user-scalable=no">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="manifest" href="manifest.json">
+    <title>Driver Camera QR</title>
+    <style>
+      :root {
+        --bg: #ffffff;
+        --text: #111111;
+        --panel-bg: rgba(255, 255, 255, 0.9);
+        --panel-text: #111111;
+        --btn-bg: rgba(255, 255, 255, 0.85);
+        --btn-border: #b7b7b7;
+        --btn-text: #111111;
+        --accent: #0a5ea8;
+      }
 
-  <main class="app-grid">
-    <aside class="panel sources">
-      <div class="panel-header">
-        <h2>Sources</h2>
-        <button id="refreshBtn" class="ghost" type="button">Refresh</button>
-      </div>
-      <div id="sourceList" class="source-list"></div>
-      <div class="toc">
-        <div class="toc-header">
-          <h3>Table of Contents</h3>
-          <div id="tocMeta" class="toc-meta">Select a source</div>
+      * {
+        box-sizing: border-box;
+      }
+
+      html,
+      body {
+        height: 100%;
+        margin: 0;
+      }
+
+      body {
+        background: var(--bg);
+        color: var(--text);
+        font-family: "Trebuchet MS", "Segoe UI", sans-serif;
+        -webkit-font-smoothing: antialiased;
+        text-rendering: optimizeLegibility;
+        touch-action: manipulation;
+        -webkit-tap-highlight-color: transparent;
+        user-select: none;
+      }
+
+      body.dark-bg {
+        --bg: #000000;
+        --text: #f5f5f5;
+        --panel-bg: rgba(0, 0, 0, 0.8);
+        --panel-text: #f5f5f5;
+        --btn-bg: rgba(0, 0, 0, 0.7);
+        --btn-border: #444444;
+        --btn-text: #f5f5f5;
+      }
+
+      .app {
+        position: relative;
+        width: 100vw;
+        height: 100vh;
+        background: var(--bg);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        overflow: hidden;
+      }
+
+      #qr {
+        width: 100vw;
+        height: 100vh;
+        object-fit: contain;
+        image-rendering: -webkit-optimize-contrast;
+        image-rendering: crisp-edges;
+        image-rendering: pixelated;
+        pointer-events: none;
+      }
+
+      .show-controls {
+        position: absolute;
+        top: 12px;
+        right: 12px;
+        z-index: 3;
+        padding: 8px 14px;
+        border-radius: 999px;
+        background: var(--btn-bg);
+        color: var(--btn-text);
+        border: 1px solid var(--btn-border);
+        font-size: 14px;
+        letter-spacing: 0.2px;
+      }
+
+      .show-controls.hidden {
+        opacity: 0;
+        pointer-events: none;
+      }
+
+      .controls {
+        position: absolute;
+        top: 12px;
+        left: 12px;
+        right: 12px;
+        transform: translateY(-8px);
+        background: var(--panel-bg);
+        color: var(--panel-text);
+        border-radius: 14px;
+        padding: 8px;
+        box-shadow: 0 12px 30px rgba(0, 0, 0, 0.18);
+        opacity: 0;
+        pointer-events: none;
+        transition: opacity 180ms ease, transform 180ms ease;
+        z-index: 2;
+      }
+
+      .controls.visible {
+        opacity: 1;
+        pointer-events: auto;
+        transform: translateY(0);
+      }
+
+      .row {
+        display: flex;
+        gap: 8px;
+        margin-bottom: 0;
+      }
+
+      .btn {
+        flex: 1 1 90px;
+        border-radius: 10px;
+        border: 1px solid var(--btn-border);
+        background: var(--btn-bg);
+        color: var(--btn-text);
+        padding: 8px 0;
+        font-size: 13px;
+        letter-spacing: 0.2px;
+      }
+
+      .btn.active {
+        border-color: var(--accent);
+        color: var(--accent);
+      }
+
+      .wake {
+        position: absolute;
+        top: 16px;
+        left: 50%;
+        transform: translateX(-50%);
+        background: rgba(0, 0, 0, 0.7);
+        color: #ffffff;
+        padding: 6px 12px;
+        border-radius: 999px;
+        font-size: 12px;
+        z-index: 2;
+        transition: opacity 200ms ease;
+      }
+
+      .wake.hidden {
+        opacity: 0;
+        pointer-events: none;
+      }
+
+      @media (prefers-reduced-motion: reduce) {
+        .controls,
+        .wake {
+          transition: none;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <main id="app" class="app">
+      <img id="qr" src="images/qr.jpeg" alt="Driver camera QR code">
+      <button id="open-controls" class="show-controls" type="button" aria-expanded="false">Options</button>
+      <section id="controls" class="controls" aria-hidden="true">
+        <div class="row">
+          <button id="toggle-invert" class="btn" type="button" aria-pressed="false">Invert</button>
+          <button id="toggle-bg" class="btn" type="button" aria-pressed="false">Background</button>
+          <button id="reset" class="btn" type="button">Reset</button>
+          <button id="close-controls" class="btn" type="button">Close</button>
         </div>
-        <div id="tocList" class="toc-list"></div>
-      </div>
-      <div class="panel-note">
-        Add new JSON files to <code>data/</code> and list them in <code>data/index.json</code>.
-      </div>
-    </aside>
+      </section>
+      <div id="wake" class="wake hidden">Tap once to keep the screen awake</div>
+    </main>
+    <script>
+      const qr = document.getElementById("qr");
+      const controls = document.getElementById("controls");
+      const openControls = document.getElementById("open-controls");
+      const toggleInvert = document.getElementById("toggle-invert");
+      const toggleBg = document.getElementById("toggle-bg");
+      const resetButton = document.getElementById("reset");
+      const closeControls = document.getElementById("close-controls");
+      const wake = document.getElementById("wake");
 
-    <section class="panel reader">
-      <div class="reader-header">
-        <div>
-          <div class="reader-label">Active reading</div>
-          <div id="activeTitle" class="reader-title">Select a source</div>
-          <div id="activeMeta" class="reader-meta"></div>
-        </div>
-        <form id="searchForm" class="search-bar">
-          <input id="searchInput" type="search" placeholder="Search a word or phrase" autocomplete="off" />
-          <button class="primary" type="submit">Search</button>
-          <button class="ghost" type="button" id="clearSearchBtn">Clear</button>
-        </form>
-      </div>
+      const STORAGE_KEY = "driverQrSettings";
+      const state = {
+        invert: false,
+        dark: false,
+        controlsVisible: false,
+        wakeEnabled: false
+      };
 
-      <div id="searchSummary" class="search-summary">Search across all sources.</div>
-      <div id="resultsList" class="results-list"></div>
+      function setButtonState(button, active) {
+        button.classList.toggle("active", active);
+        button.setAttribute("aria-pressed", active ? "true" : "false");
+      }
 
-      <article id="content" class="reader-content" tabindex="0"></article>
-    </section>
+      function applyControlsState(visible) {
+        controls.classList.toggle("visible", visible);
+        controls.setAttribute("aria-hidden", visible ? "false" : "true");
+        openControls.classList.toggle("hidden", visible);
+        openControls.setAttribute("aria-expanded", visible ? "true" : "false");
+      }
 
-    <aside class="panel definitions">
-      <div class="panel-header">
-        <h2>Definition Bank</h2>
-      </div>
-      <p class="panel-note">Select text in the reader to add a definition or edit an existing one.</p>
-      <div id="definitionsList" class="definitions-list"></div>
-    </aside>
-  </main>
+      function updateFilters() {
+        qr.style.filter = state.invert ? "invert(1)" : "none";
+      }
 
-  <section id="selectionPanel" class="selection-panel hidden" aria-live="polite">
-    <div class="selection-header">
-      <div class="selection-title">Define selection</div>
-      <button id="cancelSelectionBtn" class="icon-btn" type="button" aria-label="Close">x</button>
-    </div>
-    <div id="selectionText" class="selection-text"></div>
-    <label class="field">
-      <span>Definition</span>
-      <textarea id="definitionInput" rows="3" placeholder="Add a short definition"></textarea>
-    </label>
-    <div class="selection-actions">
-      <button id="saveDefinitionBtn" type="button" class="primary">Save definition</button>
-      <div id="definitionError" class="form-error"></div>
-    </div>
-  </section>
+      function setWakePromptVisible(visible) {
+        wake.classList.toggle("hidden", !visible);
+      }
 
-  <noscript class="noscript">This app needs JavaScript enabled to search and save definitions.</noscript>
-  <script src="app.js"></script>
-</body>
+      function saveSettings() {
+        const payload = {
+          invert: state.invert,
+          dark: state.dark,
+          controlsVisible: state.controlsVisible,
+          wakeEnabled: state.wakeEnabled
+        };
+        localStorage.setItem(STORAGE_KEY, JSON.stringify(payload));
+      }
+
+      function loadSettings() {
+        const raw = localStorage.getItem(STORAGE_KEY);
+        if (!raw) {
+          return;
+        }
+
+        try {
+          const saved = JSON.parse(raw);
+          state.invert = Boolean(saved.invert);
+          state.dark = Boolean(saved.dark);
+          state.controlsVisible = Boolean(saved.controlsVisible);
+          state.wakeEnabled = Boolean(saved.wakeEnabled);
+        } catch (error) {
+          localStorage.removeItem(STORAGE_KEY);
+        }
+      }
+
+      function setControlsVisible(visible) {
+        state.controlsVisible = visible;
+        applyControlsState(state.controlsVisible);
+        saveSettings();
+      }
+
+      openControls.addEventListener("click", () => setControlsVisible(true));
+      closeControls.addEventListener("click", () => setControlsVisible(false));
+
+      toggleInvert.addEventListener("click", () => {
+        state.invert = !state.invert;
+        setButtonState(toggleInvert, state.invert);
+        updateFilters();
+        saveSettings();
+      });
+
+      toggleBg.addEventListener("click", () => {
+        state.dark = !state.dark;
+        document.body.classList.toggle("dark-bg", state.dark);
+        setButtonState(toggleBg, state.dark);
+        saveSettings();
+      });
+
+      resetButton.addEventListener("click", () => {
+        state.invert = false;
+        state.dark = false;
+        state.controlsVisible = false;
+        document.body.classList.remove("dark-bg");
+        setButtonState(toggleInvert, false);
+        setButtonState(toggleBg, false);
+        updateFilters();
+        setControlsVisible(false);
+      });
+
+      loadSettings();
+      document.body.classList.toggle("dark-bg", state.dark);
+      setButtonState(toggleInvert, state.invert);
+      setButtonState(toggleBg, state.dark);
+      applyControlsState(state.controlsVisible);
+      setWakePromptVisible("wakeLock" in navigator && !state.wakeEnabled);
+      updateFilters();
+
+      let wakeLock = null;
+
+      async function requestWakeLock() {
+        if (!("wakeLock" in navigator)) {
+          setWakePromptVisible(false);
+          return;
+        }
+
+        try {
+          if (!state.wakeEnabled) {
+            state.wakeEnabled = true;
+            saveSettings();
+          }
+          wakeLock = await navigator.wakeLock.request("screen");
+          setWakePromptVisible(false);
+        } catch (error) {
+          wake.textContent = "Screen awake lock unavailable";
+          setTimeout(() => setWakePromptVisible(false), 1500);
+        }
+      }
+
+      document.addEventListener("click", () => {
+        requestWakeLock();
+      }, { once: true });
+
+      document.addEventListener("visibilitychange", () => {
+        if (wakeLock && document.visibilityState === "visible") {
+          requestWakeLock();
+        }
+      });
+
+      if ("serviceWorker" in navigator) {
+        window.addEventListener("load", () => {
+          navigator.serviceWorker.register("service-worker.js");
+        });
+      }
+    </script>
+  </body>
 </html>
